# t1

./: .gitignore  pyproject.toml
.github/workflows/: ci.yaml  release.yaml  test.yaml
mylib/: __init__.py  foo.pyi
src/mylib/: foo.pyx
tests/: test_foo.py
