[build-system]
requires = [
    "setuptools>=80",
    "cython>=0.29.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "mylib-97cbaf8985bcc"
version = "0.0.1"
description = "Описание"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.12,<3.15"
dependencies = []


[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["mylib"]
package-dir = { "mylib" = "./mylib" }
ext-modules = [
    {name="mylib.foo", sources=["./src/mylib/foo.pyx"]}
]

# Настройки cibuildwheel для бинарной сборки под разные платформы
[tool.cibuildwheel]
# Собираем колеса для Python 3.8 - 3.12
build = ["cp312-*", "cp313-*", "cp314-*"]
# Пропускаем 32-битные сборки
skip = ["*-win32", "*-manylinux_i686"]
# Команда для тестирования собранного колеса
test-command = "pytest {project}/tests"
# Зависимости, необходимые для тестирования
test-requires = ["pytest"]