[build-system]
requires = [
    "setuptools>=80",
    "cython>=0.29.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "mylib-97cbaf8985bcc"
version = "0.0.1"
description = "Описание"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.12,<3.15"
dependencies = []


[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["mylib"]
package-dir = { "mylib" = "./mylib" }
ext-modules = [
    {name="mylib.foo", sources=["./src/mylib/foo.pyx"]}
]
